@@ -1,12 +1,11 @@
 package fortscale.utils.image;
 
-import sun.misc.BASE64Decoder;
-
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.util.Base64;
 
 /**
  * Created by Amir Keren on 19/01/16.
@@ -14,8 +13,7 @@ import java.io.IOException;
 public class ImageUtils {
 
 	public void convertBase64ToImg(String base64Str, String destFilePath, String fileType) throws IOException {
-		BASE64Decoder decoder = new BASE64Decoder();
-		byte[] imageByte = decoder.decodeBuffer(base64Str);
+		byte[] imageByte = Base64.getDecoder().decode(base64Str);
 		ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
 		BufferedImage image = ImageIO.read(bis);
 		bis.close();
